Migrate Spring Batch Infrastructure to JUnit Jupiter
Issue #4125