@@ -1,5 +1,5 @@
 /*
- * Copyright 2006-2021 the original author or authors.
+ * Copyright 2006-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -15,7 +15,8 @@
  */
 package org.springframework.batch.item.mail;
 
-import static org.junit.Assert.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
@@ -23,12 +24,13 @@ import static org.mockito.AdditionalMatchers.aryEq;
 
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 import java.util.concurrent.atomic.AtomicReference;
 
 import jakarta.mail.MessagingException;
 
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
 import org.springframework.mail.MailException;
 import org.springframework.mail.MailMessage;
@@ -50,7 +52,7 @@ public class SimpleMailMessageItemWriterTests {
 
 	private MailSender mailSender = mock(MailSender.class);
 
-	@Before
+	@BeforeEach
 	public void setUp() {
 		writer.setMailSender(mailSender);
 	}
@@ -73,7 +75,7 @@ public class SimpleMailMessageItemWriterTests {
 		}
 	}
 
-	@Test(expected = MailSendException.class)
+	@Test
 	public void testDefaultErrorHandler() throws Exception {
 
 		SimpleMailMessage foo = new SimpleMailMessage();
@@ -91,7 +93,7 @@ public class SimpleMailMessageItemWriterTests {
 		when(mailSender).thenThrow(new MailSendException(
 				Collections.singletonMap((Object) foo, (Exception) new MessagingException("FOO"))));
 
-		writer.write(Arrays.asList(items));
+		assertThrows(MailSendException.class, () -> writer.write(List.of(items)));
 	}
 
 	@Test
