@@ -1,5 +1,5 @@
 /*
- * Copyright 2017-2021 the original author or authors.
+ * Copyright 2017-2022 the original author or authors.
  *
  *  Licensed under the Apache License, Version 2.0 (the "License");
  *  you may not use this file except in compliance with the License.
@@ -18,12 +18,13 @@ package org.springframework.batch.item.mail.builder;
 
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 import java.util.concurrent.atomic.AtomicReference;
 
 import jakarta.mail.MessagingException;
 
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
 import org.springframework.batch.item.mail.MailErrorHandler;
 import org.springframework.batch.item.mail.SimpleMailMessageItemWriter;
@@ -33,8 +34,9 @@ import org.springframework.mail.MailSendException;
 import org.springframework.mail.MailSender;
 import org.springframework.mail.SimpleMailMessage;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.fail;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.fail;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
@@ -53,7 +55,7 @@ public class SimpleMailMessageItemWriterBuilderTests {
 
 	private SimpleMailMessage[] items;
 
-	@Before
+	@BeforeEach
 	public void setup() {
 		mailSender = mock(MailSender.class);
 		this.foo = new SimpleMailMessage();
@@ -81,15 +83,15 @@ public class SimpleMailMessageItemWriterBuilderTests {
 		}
 	}
 
-	@Test(expected = MailSendException.class)
-	public void testErrorHandler() throws Exception {
+	@Test
+	public void testErrorHandler() {
 		SimpleMailMessageItemWriter writer = new SimpleMailMessageItemWriterBuilder().mailSender(this.mailSender)
 				.build();
 
 		this.mailSender.send(this.foo, this.bar);
 		when(this.mailSender)
 				.thenThrow(new MailSendException(Collections.singletonMap(this.foo, new MessagingException("FOO"))));
-		writer.write(Arrays.asList(this.items));
+		assertThrows(MailSendException.class, () -> writer.write(List.of(this.items)));
 	}
 
 	@Test
